--- a/index.html
+++ b/index.html
@@ -10,44 +10,68 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <div class="logo">
-                <h4>Header Logo</h4>
+    <header>
+        <nav>
+            <div id="header-logo">
+                Header Logo
             </div>
-            <div class="links">
-                <div class="link-container">
-                    <a href="#">header link one</a>
-                </div>
-                <div class="link-container">
-                    <a href="#">header link two</a>
-                </div>
-                <div class="link-container">
-                    <a href="#">header link three</a>
-                </div>
+            <div id="header-links">
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
             </div>
-        </div>
-        <div class="hero">
-            <div class="hero-text">
+        </nav>
+        <div id="hero">
+            <div id="hero-text">
                 <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button id="hero-signup">
+                    Sign up
+                </button>
             </div>
-            <div class="hero-image">
-                <p>Hero image goes here</p>
+            <div id="hero-image">
+                this is a placeholer for an image
             </div>
         </div>
-        <div class="information">
-            Information goes here
-        </div>
-        <div class="quotes">
-            Quotes go here
-        </div>
-        <div class="call-to-action">
-            Call to action goes here
-        </div>
-        <div class="footer">
-            Footer goes here
-        </div>
-    </div>
+    </header>
+    <main>
+        <section id="information">
+            <h2>Some random information.</h2>
+            <div>
+                <article>
+                    <div id="article-image"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </article>
+                <article>
+                    <div id="article-image"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </article>
+                <article>
+                    <div id="article-image"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </article>
+                <article>
+                    <div id="article-image"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </article>
+            </div>
+        </section>
+        <section id="quotes">
+            <blockquote>
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </blockquote>
+            <p>-Thor, God of Thunder</p>
+        </section>
+        <section id="call-to-action">
+            <div>
+                <h4>Call to action! It's time!</h4>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </section>
+    </main>
+    <footer>
+        Copyright © The Odin Project 2021
+    </footer>
 </body>
 </html>
