--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div id="header-logo">
-                Header Logo
+                <h2>Header Logo</h2>
             </div>
             <div id="header-links">
                 <a href="#">header link one</a>
@@ -30,7 +30,7 @@
                 </button>
             </div>
             <div id="hero-image">
-                this is a placeholer for an image
+                this is a placeholder for an image
             </div>
         </div>
     </header>
