Add hero styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </button>
             </div>
             <div id="hero-image">
-                this is a placeholder for an image
+                <p>this is a placeholder for an image</p>
             </div>
         </div>
     </header>
