Add information and call to action styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="index.css">
 
     <title>Landing Page</title>
@@ -36,22 +41,22 @@
     </header>
     <main>
         <section id="information">
-            <h2>Some random information.</h2>
+            <h1>Some random information.</h1>
             <div>
                 <article>
-                    <div id="article-image"></div>
+                    <div class="article-image"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </article>
                 <article>
-                    <div id="article-image"></div>
+                    <div class="article-image"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </article>
                 <article>
-                    <div id="article-image"></div>
+                    <div class="article-image"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </article>
                 <article>
-                    <div id="article-image"></div>
+                    <div class="article-image"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </article>
             </div>
@@ -63,11 +68,15 @@
             <p>-Thor, God of Thunder</p>
         </section>
         <section id="call-to-action">
-            <div>
-                <h4>Call to action! It's time!</h4>
-                <p>Sign up for our product by clicking that button right over there!</p>
+            <div class="call-to-action-content">
+                <div class="call-to-action-text">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div>
+                    <button>Sign up</button>
+                </div>
             </div>
-            <button>Sign up</button>
         </section>
     </main>
     <footer>
